[package]
name = "kaspa-txscript-typed-builder"
description = "Type-safe script builder for Kaspa txscript"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaspa-txscript.workspace = true
kaspa-hashes.workspace = true
ark-serialize.workspace = true

[dev-dependencies]
kaspa-consensus-core.workspace = true
