[package]
name = "kaspa-txscript-typed-builder"
description = "Type-safe script builder for Kaspa txscript"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaspa-txscript.workspace = true
kaspa-hashes.workspace = true
kaspa-consensus-core.workspace = true
secp256k1.workspace = true
ark-serialize.workspace = true
ark-groth16.workspace = true
ark-bn254.workspace = true

[[example]]
name = "kip10_and_covenant"

[dev-dependencies]
kaspa-txscript-errors.workspace = true
rand.workspace = true
