[package]
name = "zk-covenant-rollup-core"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[features]
default = []
std = []

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
sha2 = { workspace = true, default-features = false }
blake3 = { workspace = true }
blake2b_simd = { workspace = true, default-features = false }
kaspa-hashes = { workspace = true }
kaspa-seq-commit = { workspace = true }
kaspa-smt = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
kaspa-addresses.workspace = true
kaspa-merkle.workspace = true
kaspa-txscript.workspace = true
